--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/config": "^3.3.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/lodash": "^4.14.195",
+    "@types/morgan": "^1.9.4",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.44.0",
