--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.44.0",
     "nodemon": "^3.0.1",
+    "pino-pretty": "^10.0.1",
     "prettier": "^3.0.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
