--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.195",
     "@types/morgan": "^1.9.4",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
